--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>My Personal Introduction</title>
     <style>
-      body { background-color: 36373B }
-      h1 { color: 727668 }
-      p { color: 121F3D }
+      body { background-color: 36373B; }
+      h1 { color: 727668; }
+      p { color: 121F3D; }
     </style>
   </head>
   <body>
