--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Personal Introduction</title>
     <style>
       body { 
-        background-color: 36373B; 
+        background-color: 	hsl(0.57,0.50,0.23);
       }
       h1 { 
         color: 727668; 
