--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>My Personal Introduction</title>
     <style>
       body { 
-        background-color: 	hsl(0.57,0.50,0.23);
+        background-color: hsl(0.57,0.50,0.23);
       }
       h1 { 
-        color: 727668; 
+        color: ; 
       }
       p { 
-        color: 121F3D; 
+        color: ; 
       }
     </style>
   </head>
