--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
   <head>
     <title>My Personal Introduction</title>
     <style>
-      body { 
-        background-color: hsl(0.57,0.50,0.23);
-      }
-      h1 { 
-        color: ; 
-      }
-      p { 
-        color: ; 
-      }
+      body { background-color: #1A181A; }
+      h1 { color: #; }
+      p { color: ; }
     </style>
   </head>
   <body>
