--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>My Personal Introduction</title>
     <style>
       body { background-color: #1A181A; }
-      h1 { color: #; }
-      p { color: ; }
+      h1 { color: #577F7C; }
+      p { color: #61ABAA; }
     </style>
   </head>
   <body>
