--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>My Personal Introduction</title>
     <style>
-      body { background-color: #1A181A; }
-      h1 { color: #577F7C; }
-      p { color: #61ABAA; }
+      body { background-color: (#1A181A); }
+      h1 { color: (#577F7C); }
+      p { color: (#61ABAA); }
     </style>
   </head>
   <body>
